<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/offers" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/my_orders" />
        <item
            android:id="@+id/nav_newProducts"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="new products" />
        <item
            android:id="@+id/nav_myCarts"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/my_carts" />
    </group>
</menu>