<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.paniermobil.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.paniermobil.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.paniermobil.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_offers"
        android:name="com.example.paniermobil.OffersFragment"
        android:label="@string/offers"
        tools:layout="@layout/fragment_offers" />
    <fragment
        android:id="@+id/nav_orders"
        android:name="com.example.paniermobil.ordersFragment"
        android:label="@string/my_orders"
        tools:layout="@layout/fragment_orders" />
    <fragment
        android:id="@+id/nav_newProducts"
        android:name="com.example.paniermobil.newProductsFragment"
        android:label="new product"
        tools:layout="@layout/fragment_new_products" />
    <fragment
        android:id="@+id/nav_myCarts"
        android:name="com.example.paniermobil.myCartsFragment"
        android:label="@string/my_carts"
        tools:layout="@layout/fragment_my_carts" />

</navigation>